--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <!--            android:name=".Activity_PlayTrack"-->
         <!--            android:exported="false" />-->
         <activity
-            android:name=".Actitvy_Artist"
+            android:name=".Activity_Artist"
             android:exported="false" />
         <activity
             android:name=".Activity_PlayTrack"
