--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="testingspotifyapi3"
+                    android:host="testingspotifyapi"
                     android:scheme="https" />
             </intent-filter>
         </activity>
